# ComputerVisionA2

./: CMakeLists.txt  functions.cpp  functions.h  main.cpp
